# multiplayer-platformer

./: .gitignore  Cargo.toml  README.md  index.html  notes.md  todo.md
.devcontainer/: Dockerfile
.github/workflows/: release.yaml
assets/ldtk/: ldtk_test.ldtk
assets/levels/: level-1.txt  level-2.txt  level-5.txt
assets/levels/multiplayer/: level-2.txt  level-4.txt
assets/music/: new_bossa.wav.asd
client/: Cargo.toml
client/.devcontainer/: .bash_aliases  Dockerfile
client/assets/levels/: level-3.txt
client/src/: client.rs  death.rs  grappling_hook.rs  join_menu.rs  main.rs  main_menu.rs  messages.rs  moving_block.rs  next_level.rs  pinging.rs  platform.rs  player.rs  server.rs  startup_plugin.rs  win.rs
docs/: create_docks.sh  title.txt
docs/research/: networking.md  physics.md  user-interface.md
server/: Cargo.toml
server/assets/levels/: level-4.txt  level-6.txt
server/src/: main.rs
src/: client.rs  death.rs  grappling_hook.rs  join_menu.rs  main.rs  main_menu.rs  messages.rs  moving_block.rs  next_level.rs  pinging.rs  platform.rs  player.rs  run_if.rs  server.rs  startup_plugin.rs  win.rs
