[package]
name = "multiplayer_platformer"
version = "0.1.0"
edition = "2021"
authors = ["Jake Purton"]
description = "A game made using bevy game engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.10", features = ["dynamic_linking"]}
# bevy = {version = "0.10"}
bevy_rapier2d = "0.21"
bevy_kira_audio = { version = "0.15", features = ["wav"]}
bevy_renet = "0.0.7"
serde = "1.0"
bincode = "1.3"
local-ip-address = "0.5"
bevy-inspector-egui = "0.18"
public-ip = "0.2.2"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
embed-resource = "1.6.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
